--- a/index.html
+++ b/index.html
@@ -1,69 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Byte by Byte: IT Quiz Challenge</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>Byte by Byte: IT Quiz Challenge</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #0f172a;
-      color: white;
-      text-align: center;
-      padding: 40px;
-    }
+<style>
+body {
+  font-family: Arial, sans-serif;
+  background: #0f172a;
+  color: white;
+  text-align: center;
+  padding: 20px;
+}
 
-    h1 {
-      margin-bottom: 10px;
-    }
+h1 { margin-bottom: 5px; }
 
-    #status {
-      margin: 20px auto;
-      padding: 20px;
-      width: 320px;
-      font-size: 1.5rem;
-      background: #1e293b;
-      border-radius: 12px;
-    }
+#spinner {
+  margin: 20px auto;
+  font-size: 1.8rem;
+  padding: 20px;
+  width: 320px;
+  background: #1e293b;
+  border-radius: 12px;
+}
 
-    .choices {
-      display: grid;
-      grid-template-columns: repeat(2, 140px);
-      gap: 15px;
-      justify-content: center;
-      margin-top: 30px;
-    }
+.spin {
+  animation: spin 1s linear infinite;
+}
 
-    .choice {
-      padding: 20px;
-      font-size: 1.4rem;
-      border-radius: 12px;
-      background: #334155;
-      transition: 0.3s;
-    }
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 
-    .active {
-      background: #22c55e;
-      color: black;
-    }
-  </style>
+#question {
+  margin-top: 25px;
+  font-size: 1.4rem;
+}
+
+.choices {
+  display: grid;
+  grid-template-columns: repeat(2, 160px);
+  gap: 15px;
+  justify-content: center;
+  margin-top: 25px;
+}
+
+.choice {
+  padding: 18px;
+  border-radius: 12px;
+  background: #334155;
+  font-size: 1.2rem;
+}
+
+.active {
+  background: #22c55e;
+  color: black;
+}
+
+.correct {
+  background: #16a34a;
+}
+
+.wrong {
+  background: #dc2626;
+}
+</style>
 </head>
 
 <body>
 
-  <h1>🕹️ Byte by Byte</h1>
-  <h2>IT Quiz Challenge</h2>
+<h1>🕹️ Byte by Byte</h1>
+<h2>IT Quiz Challenge</h2>
 
-  <div id="status">Waiting for ESP32 button…</div>
+<div id="spinner">🎡 Press any button to spin</div>
 
-  <div class="choices">
-    <div id="A" class="choice">A</div>
-    <div id="B" class="choice">B</div>
-    <div id="C" class="choice">C</div>
-    <div id="D" class="choice">D</div>
-  </div>
+<div id="question"></div>
 
-  <script type="module" src="main.js"></script>
+<div class="choices">
+  <div id="A" class="choice">A</div>
+  <div id="B" class="choice">B</div>
+  <div id="C" class="choice">C</div>
+  <div id="D" class="choice">D</div>
+</div>
+
+<script type="module" src="main.js"></script>
 </body>
 </html>
