--- a/leaderboard.html
+++ b/leaderboard.html
@@ -7,8 +7,11 @@
 <style>
 body{background:#0f172a;color:white;text-align:center;font-family:Arial,sans-serif;padding:20px;}
 h1{color:#fde047;}
-#board{margin-top:20px;height:400px;overflow-y:auto;}
-.entry{padding:10px;background:#334155;margin:5px;border-radius:10px;}
+#board{margin-top:20px;height:400px;overflow:hidden;position:relative;}
+.entry{padding:10px;background:#334155;margin:5px;border-radius:10px;display:flex;align-items:center;justify-content:center;font-size:1.2rem;}
+.gold{color:#FFD700;font-weight:bold;}
+.silver{color:#C0C0C0;font-weight:bold;}
+.bronze{color:#CD7F32;font-weight:bold;}
 </style>
 </head>
 <body>
@@ -18,7 +21,7 @@ h1{color:#fde047;}
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
+import { getDatabase, ref, onValue, set } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 
 const firebaseConfig = {
   apiKey: "AIzaSyBkFUpf2JuYIch95wx9B4Rk-jp9I7IudJs",
@@ -33,37 +36,46 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
 const scoresRef = ref(db,'scores');
+const controlRef = ref(db,"control");
 
 const board = document.getElementById('board');
 let entries = [];
+let scrollIndex = 0;
+const visibleCount = 5; // show 5 entries at a time
 
-onValue(scoresRef, snapshot=>{
-  const data = snapshot.val();
+function renderBoard(){
   board.innerHTML='';
-  if(!data){ board.innerHTML='No scores yet'; return; }
-  entries = Object.values(data).sort((a,b)=>b.score-a.score);
-  entries.forEach(e=>{
+  const slice = entries.slice(scrollIndex,scrollIndex+visibleCount);
+  slice.forEach((e,i)=>{
     const div=document.createElement('div');
     div.className='entry';
+    if(scrollIndex+i===0) div.classList.add('gold');
+    else if(scrollIndex+i===1) div.classList.add('silver');
+    else if(scrollIndex+i===2) div.classList.add('bronze');
     div.textContent=`${e.name||'Player'} - ${e.score} pts`;
     board.appendChild(div);
   });
+}
+
+onValue(scoresRef,snapshot=>{
+  const data = snapshot.val();
+  if(!data){ board.innerHTML='No scores yet'; entries=[]; return; }
+  entries = Object.values(data).sort((a,b)=>b.score-a.score);
+  scrollIndex=0;
+  renderBoard();
 });
 
 /* ESP32 buttons navigation */
-const controlRef = ref(db,"control");
-onValue(controlRef, snapshot=>{
-  const data=snapshot.val();
+onValue(controlRef,snapshot=>{
+  const data = snapshot.val();
   if(!data||!data.button) return;
-  const btn=data.button;
+  const btn = data.button;
   set(controlRef,{button:""}); // reset
 
-  if(btn==="C" || btn==="D"){
-    location.href='index.html';
-  }
-  // Optional: implement scroll with A/B
+  if(btn==="C" || btn==="D"){ location.href='index.html'; }
+  if(btn==="A"){ scrollIndex=Math.max(0,scrollIndex-1); renderBoard(); }
+  if(btn==="B"){ scrollIndex=Math.min(entries.length-visibleCount,scrollIndex+1); renderBoard(); }
 });
 </script>
 </body>
 </html>
-
