--- a/settings.html
+++ b/settings.html
@@ -2,26 +2,44 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Settings</title>
+<title>Settings - Byte by Byte</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-body{background:#0f172a;color:white;text-align:center;font-family:Arial,sans-serif;padding:20px;}
-h1{color:#fde047;margin-bottom:30px;}
-.timer-display{margin:15px;font-size:1.5rem;}
+body {
+  font-family: Arial, sans-serif;
+  background: #0f172a;
+  color: white;
+  text-align: center;
+  padding: 20px;
+}
+h1 { color:#fde047; }
+.settingItem {
+  background:#1e293b;
+  padding:20px;
+  margin:10px auto;
+  width:300px;
+  border-radius:12px;
+  font-size:1.5rem;
+  transition: background 0.3s;
+}
+.active { background:#fde047; color:black; }
 </style>
 </head>
 <body>
-<h1>Settings</h1>
+<h1>⚙️ Settings</h1>
 
-<div class="timer-display">Answer Timer: <span id="answerTime">10</span>s</div>
-<div class="timer-display">Reveal Timer: <span id="revealTime">5</span>s</div>
-<p>Use buttons to adjust: A/B for Answer, C/D for Reveal</p>
-<p>Press A + B together to Save & Back to Menu</p>
+<div id="settings">
+  <div class="settingItem active" data-key="answerTime">Answer Time: <span id="answerTimeDisplay"></span>s</div>
+  <div class="settingItem" data-key="revealTime">Reveal Time: <span id="revealTimeDisplay"></span>s</div>
+</div>
+
+<p>Use A/B to change values, D to Save & Back to Menu</p>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
 import { getDatabase, ref, onValue, set } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 
+/* 🔥 FIREBASE CONFIG */
 const firebaseConfig = {
   apiKey: "AIzaSyBkFUpf2JuYIch95wx9B4Rk-jp9I7IudJs",
   authDomain: "byte-by-byte-f7a4c.firebaseapp.com",
@@ -32,41 +50,63 @@ const firebaseConfig = {
   appId: "1:838552047744:web:f653b9fba96e49aa44d665"
 };
 
+/* 🔌 INITIALIZE FIREBASE */
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
 const controlRef = ref(db,"control");
 
-let answerTime = parseInt(localStorage.getItem('answerTime')) || 10;
-let revealTime = parseInt(localStorage.getItem('revealTime')) || 5;
+/* ⚙️ SETTINGS LOGIC */
+const settingsItems = Array.from(document.querySelectorAll(".settingItem"));
+let currentIndex = 0;
 
-const answerSpan = document.getElementById('answerTime');
-const revealSpan = document.getElementById('revealTime');
-answerSpan.textContent = answerTime;
-revealSpan.textContent = revealTime;
+// Load from localStorage or defaults
+let answerTime = parseInt(localStorage.getItem("answerTime")) || 10;
+let revealTime = parseInt(localStorage.getItem("revealTime")) || 5;
 
-/* Detect ESP32 button presses */
-onValue(controlRef, snapshot=>{
+const answerTimeDisplay = document.getElementById("answerTimeDisplay");
+const revealTimeDisplay = document.getElementById("revealTimeDisplay");
+
+function updateDisplay() {
+  answerTimeDisplay.textContent = answerTime;
+  revealTimeDisplay.textContent = revealTime;
+}
+
+function updateActive() {
+  settingsItems.forEach((el,i)=> el.classList.toggle("active", i===currentIndex));
+}
+
+updateDisplay();
+updateActive();
+
+/* 🔌 ESP32 BUTTON CONTROLS */
+onValue(controlRef, snapshot => {
   const data = snapshot.val();
   if(!data||!data.button) return;
   const btn = data.button;
+  console.log("Button pressed:", btn); 
   set(controlRef,{button:""}); // reset
 
-  if(btn==="A") answerTime++;
-  if(btn==="B") answerTime = Math.max(1, answerTime-1);
-  if(btn==="C") revealTime++;
-  if(btn==="D") revealTime = Math.max(1, revealTime-1);
+  const currentItem = settingsItems[currentIndex];
+  const key = currentItem.dataset.key;
 
-  answerSpan.textContent=answerTime;
-  revealSpan.textContent=revealTime;
-});
-
-/* Save values if user presses A+B together */
-document.addEventListener('keydown',e=>{
-  if(e.key==='a' && e.key==='b'){
-    localStorage.setItem('answerTime',answerTime);
-    localStorage.setItem('revealTime',revealTime);
-    location.href='index.html';
+  if(btn==="A"){ // Move up / +1
+    if(key==="answerTime") answerTime++;
+    if(key==="revealTime") revealTime++;
+    currentIndex = (currentIndex-1 + settingsItems.length) % settingsItems.length;
+    updateActive();
+    updateDisplay();
+  } else if(btn==="B"){ // Move down / -1
+    if(key==="answerTime" && answerTime>1) answerTime--;
+    if(key==="revealTime" && revealTime>1) revealTime--;
+    currentIndex = (currentIndex+1)%settingsItems.length;
+    updateActive();
+    updateDisplay();
+  } else if(btn==="D"){ // Save & Back to Menu
+    localStorage.setItem("answerTime", answerTime);
+    localStorage.setItem("revealTime", revealTime);
+    window.location.href="index.html";
   }
+  // C button can remain unused or optional
 });
 </script>
 </body>
